set(
	SGE_SYSTEMS_FILES
	libs/systems/impl/include/sge/systems/impl/any_visitor.hpp
	libs/systems/impl/include/sge/systems/impl/audio/find_player_plugin.hpp
	libs/systems/impl/include/sge/systems/impl/audio/loader.hpp
	libs/systems/impl/include/sge/systems/impl/audio/loader_fwd.hpp
	libs/systems/impl/include/sge/systems/impl/audio/loader_unique_ptr.hpp
	libs/systems/impl/include/sge/systems/impl/audio/player.hpp
	libs/systems/impl/include/sge/systems/impl/audio/player_fwd.hpp
	libs/systems/impl/include/sge/systems/impl/audio/player_pair.hpp
	libs/systems/impl/include/sge/systems/impl/audio/player_pair_fwd.hpp
	libs/systems/impl/include/sge/systems/impl/audio/player_unique_ptr.hpp
	libs/systems/impl/include/sge/systems/impl/detail/custom_cursor.hpp
	libs/systems/impl/include/sge/systems/impl/detail/instance_impl.hpp
	libs/systems/impl/include/sge/systems/impl/extract_config.hpp
	libs/systems/impl/include/sge/systems/impl/extract_plugin_path.hpp
	libs/systems/impl/include/sge/systems/impl/find_plugin.hpp
	libs/systems/impl/include/sge/systems/impl/find_plugin_opt.hpp
	libs/systems/impl/include/sge/systems/impl/font/find_plugin.hpp
	libs/systems/impl/include/sge/systems/impl/font/object.hpp
	libs/systems/impl/include/sge/systems/impl/font/object_fwd.hpp
	libs/systems/impl/include/sge/systems/impl/font/object_unique_ptr.hpp
	libs/systems/impl/include/sge/systems/impl/image2d/object.hpp
	libs/systems/impl/include/sge/systems/impl/image2d/object_fwd.hpp
	libs/systems/impl/include/sge/systems/impl/image2d/object_unique_ptr.hpp
	libs/systems/impl/include/sge/systems/impl/ini_section_name.hpp
	libs/systems/impl/include/sge/systems/impl/input/cursor_modifier.hpp
	libs/systems/impl/include/sge/systems/impl/input/cursor_modifier_fwd.hpp
	libs/systems/impl/include/sge/systems/impl/input/cursor_modifier_unique_ptr.hpp
	libs/systems/impl/include/sge/systems/impl/input/object.hpp
	libs/systems/impl/include/sge/systems/impl/input/object_fwd.hpp
	libs/systems/impl/include/sge/systems/impl/input/object_unique_ptr.hpp
	libs/systems/impl/include/sge/systems/impl/log_context.hpp
	libs/systems/impl/include/sge/systems/impl/log_name.hpp
	libs/systems/impl/include/sge/systems/impl/make_any_key.hpp
	libs/systems/impl/include/sge/systems/impl/merge_config_strings.hpp
	libs/systems/impl/include/sge/systems/impl/plugin_pair_decl.hpp
	libs/systems/impl/include/sge/systems/impl/plugin_pair_fwd.hpp
	libs/systems/impl/include/sge/systems/impl/plugin_pair_impl.hpp
	libs/systems/impl/include/sge/systems/impl/renderer/create_device.hpp
	libs/systems/impl/include/sge/systems/impl/renderer/device.hpp
	libs/systems/impl/include/sge/systems/impl/renderer/device_fwd.hpp
	libs/systems/impl/include/sge/systems/impl/renderer/device_unique_ptr.hpp
	libs/systems/impl/include/sge/systems/impl/renderer/find_plugin.hpp
	libs/systems/impl/include/sge/systems/impl/renderer/optional_system_ref.hpp
	libs/systems/impl/include/sge/systems/impl/renderer/optional_system_ref_fwd.hpp
	libs/systems/impl/include/sge/systems/impl/renderer/plugin_core_pair.hpp
	libs/systems/impl/include/sge/systems/impl/renderer/plugin_core_pair_fwd.hpp
	libs/systems/impl/include/sge/systems/impl/renderer/system.hpp
	libs/systems/impl/include/sge/systems/impl/renderer/system_fwd.hpp
	libs/systems/impl/include/sge/systems/impl/renderer/system_unique_ptr.hpp
	libs/systems/impl/include/sge/systems/impl/unpack_if_present.hpp
	libs/systems/impl/include/sge/systems/impl/window/base.hpp
	libs/systems/impl/include/sge/systems/impl/window/base_fwd.hpp
	libs/systems/impl/include/sge/systems/impl/window/base_unique_ptr.hpp
	libs/systems/impl/include/sge/systems/impl/window/make_base.hpp
	libs/systems/impl/include/sge/systems/impl/window/make_system_base.hpp
	libs/systems/impl/include/sge/systems/impl/window/object.hpp
	libs/systems/impl/include/sge/systems/impl/window/object_fwd.hpp
	libs/systems/impl/include/sge/systems/impl/window/object_unique_ptr.hpp
	libs/systems/impl/include/sge/systems/impl/window/original.hpp
	libs/systems/impl/include/sge/systems/impl/window/original_system.hpp
	libs/systems/impl/include/sge/systems/impl/window/quit.hpp
	libs/systems/impl/include/sge/systems/impl/window/quit_fwd.hpp
	libs/systems/impl/include/sge/systems/impl/window/system.hpp
	libs/systems/impl/include/sge/systems/impl/window/system_base.hpp
	libs/systems/impl/include/sge/systems/impl/window/system_base_fwd.hpp
	libs/systems/impl/include/sge/systems/impl/window/system_base_unique_ptr.hpp
	libs/systems/impl/include/sge/systems/impl/window/system_fwd.hpp
	libs/systems/impl/include/sge/systems/impl/window/system_unique_ptr.hpp
	libs/systems/impl/include/sge/systems/impl/window/to_awl_parameters.hpp
	libs/systems/impl/include/sge/systems/impl/window/wrapped.hpp
	libs/systems/impl/include/sge/systems/impl/window/wrapped_system.hpp
	libs/systems/impl/src/systems/impl/any_visitor.cpp
	libs/systems/impl/src/systems/impl/audio/find_player_plugin.cpp
	libs/systems/impl/src/systems/impl/audio/loader.cpp
	libs/systems/impl/src/systems/impl/audio/player.cpp
	libs/systems/impl/src/systems/impl/audio/player_pair.cpp
	libs/systems/impl/src/systems/impl/detail/custom_cursor.cpp
	libs/systems/impl/src/systems/impl/detail/instance_impl.cpp
	libs/systems/impl/src/systems/impl/extract_config.cpp
	libs/systems/impl/src/systems/impl/extract_plugin_path.cpp
	libs/systems/impl/src/systems/impl/font/find_plugin.cpp
	libs/systems/impl/src/systems/impl/font/object.cpp
	libs/systems/impl/src/systems/impl/image2d/object.cpp
	libs/systems/impl/src/systems/impl/ini_section_name.cpp
	libs/systems/impl/src/systems/impl/input/cursor_modifier.cpp
	libs/systems/impl/src/systems/impl/input/object.cpp
	libs/systems/impl/src/systems/impl/log_context.cpp
	libs/systems/impl/src/systems/impl/log_name.cpp
	libs/systems/impl/src/systems/impl/make_any_key.cpp
	libs/systems/impl/src/systems/impl/merge_config_strings.cpp
	libs/systems/impl/src/systems/impl/renderer/create_device.cpp
	libs/systems/impl/src/systems/impl/renderer/device.cpp
	libs/systems/impl/src/systems/impl/renderer/find_plugin.cpp
	libs/systems/impl/src/systems/impl/renderer/plugin_core_pair.cpp
	libs/systems/impl/src/systems/impl/renderer/system.cpp
	libs/systems/impl/src/systems/impl/window/base.cpp
	libs/systems/impl/src/systems/impl/window/make_base.cpp
	libs/systems/impl/src/systems/impl/window/make_system_base.cpp
	libs/systems/impl/src/systems/impl/window/object.cpp
	libs/systems/impl/src/systems/impl/window/original.cpp
	libs/systems/impl/src/systems/impl/window/original_system.cpp
	libs/systems/impl/src/systems/impl/window/quit.cpp
	libs/systems/impl/src/systems/impl/window/system.cpp
	libs/systems/impl/src/systems/impl/window/system_base.cpp
	libs/systems/impl/src/systems/impl/window/to_awl_parameters.cpp
	libs/systems/impl/src/systems/impl/window/wrapped.cpp
	libs/systems/impl/src/systems/impl/window/wrapped_system.cpp
	libs/systems/include/sge/systems/audio_loader.hpp
	libs/systems/include/sge/systems/audio_loader_fwd.hpp
	libs/systems/include/sge/systems/audio_player.hpp
	libs/systems/include/sge/systems/audio_player_default.hpp
	libs/systems/include/sge/systems/audio_player_fwd.hpp
	libs/systems/include/sge/systems/config.hpp
	libs/systems/include/sge/systems/config_fwd.hpp
	libs/systems/include/sge/systems/cursor_hotspot.hpp
	libs/systems/include/sge/systems/cursor_hotspot_fwd.hpp
	libs/systems/include/sge/systems/cursor_option.hpp
	libs/systems/include/sge/systems/cursor_option_field.hpp
	libs/systems/include/sge/systems/cursor_option_field_fwd.hpp
	libs/systems/include/sge/systems/cursor_option_fwd.hpp
	libs/systems/include/sge/systems/custom_cursor.hpp
	libs/systems/include/sge/systems/custom_cursor_fwd.hpp
	libs/systems/include/sge/systems/detail/any.hpp
	libs/systems/include/sge/systems/detail/any_fwd.hpp
	libs/systems/include/sge/systems/detail/any_key.hpp
	libs/systems/include/sge/systems/detail/any_key_fwd.hpp
	libs/systems/include/sge/systems/detail/any_list.hpp
	libs/systems/include/sge/systems/detail/any_map.hpp
	libs/systems/include/sge/systems/detail/assert_dependencies.hpp
	libs/systems/include/sge/systems/detail/assert_dependencies_one.hpp
	libs/systems/include/sge/systems/detail/custom_cursor_fwd.hpp
	libs/systems/include/sge/systems/detail/extract_needs_init.hpp
	libs/systems/include/sge/systems/detail/extract_parameter_type.hpp
	libs/systems/include/sge/systems/detail/has_with_audio_loader.hpp
	libs/systems/include/sge/systems/detail/has_with_audio_player.hpp
	libs/systems/include/sge/systems/detail/has_with_font.hpp
	libs/systems/include/sge/systems/detail/has_with_image2d.hpp
	libs/systems/include/sge/systems/detail/has_with_input.hpp
	libs/systems/include/sge/systems/detail/has_with_renderer.hpp
	libs/systems/include/sge/systems/detail/has_with_window.hpp
	libs/systems/include/sge/systems/detail/instance.hpp
	libs/systems/include/sge/systems/detail/instance_impl_fwd.hpp
	libs/systems/include/sge/systems/detail/is_with_input.hpp
	libs/systems/include/sge/systems/detail/is_with_renderer.hpp
	libs/systems/include/sge/systems/detail/list.hpp
	libs/systems/include/sge/systems/detail/list_fwd.hpp
	libs/systems/include/sge/systems/detail/make_default_element.hpp
	libs/systems/include/sge/systems/detail/make_defaults.hpp
	libs/systems/include/sge/systems/detail/make_list.hpp
	libs/systems/include/sge/systems/detail/make_list_element.hpp
	libs/systems/include/sge/systems/detail/make_list_element_impl.hpp
	libs/systems/include/sge/systems/detail/quit_on_escape.hpp
	libs/systems/include/sge/systems/detail/renderer.hpp
	libs/systems/include/sge/systems/detail/renderer_caps.hpp
	libs/systems/include/sge/systems/detail/renderer_fwd.hpp
	libs/systems/include/sge/systems/empty_list.hpp
	libs/systems/include/sge/systems/empty_list_fwd.hpp
	libs/systems/include/sge/systems/exception.hpp
	libs/systems/include/sge/systems/font.hpp
	libs/systems/include/sge/systems/font_fwd.hpp
	libs/systems/include/sge/systems/image2d.hpp
	libs/systems/include/sge/systems/image2d_fwd.hpp
	libs/systems/include/sge/systems/input.hpp
	libs/systems/include/sge/systems/input_fwd.hpp
	libs/systems/include/sge/systems/instance.hpp
	libs/systems/include/sge/systems/instance_decl.hpp
	libs/systems/include/sge/systems/instance_fwd.hpp
	libs/systems/include/sge/systems/instance_impl.hpp
	libs/systems/include/sge/systems/list.hpp
	libs/systems/include/sge/systems/list_decl.hpp
	libs/systems/include/sge/systems/list_fwd.hpp
	libs/systems/include/sge/systems/list_impl.hpp
	libs/systems/include/sge/systems/log_location.hpp
	libs/systems/include/sge/systems/log_settings.hpp
	libs/systems/include/sge/systems/log_settings_fwd.hpp
	libs/systems/include/sge/systems/make_empty_list.hpp
	libs/systems/include/sge/systems/make_list.hpp
	libs/systems/include/sge/systems/optional_log_context_ref.hpp
	libs/systems/include/sge/systems/optional_log_context_ref_fwd.hpp
	libs/systems/include/sge/systems/optional_log_settings.hpp
	libs/systems/include/sge/systems/optional_log_settings_fwd.hpp
	libs/systems/include/sge/systems/optional_name.hpp
	libs/systems/include/sge/systems/optional_name_fwd.hpp
	libs/systems/include/sge/systems/optional_plugin_path.hpp
	libs/systems/include/sge/systems/optional_plugin_path_fwd.hpp
	libs/systems/include/sge/systems/original_window.hpp
	libs/systems/include/sge/systems/original_window_fwd.hpp
	libs/systems/include/sge/systems/plugin_path.hpp
	libs/systems/include/sge/systems/quit_on_escape.hpp
	libs/systems/include/sge/systems/renderer.hpp
	libs/systems/include/sge/systems/renderer_caps.hpp
	libs/systems/include/sge/systems/renderer_caps_fwd.hpp
	libs/systems/include/sge/systems/renderer_fwd.hpp
	libs/systems/include/sge/systems/window.hpp
	libs/systems/include/sge/systems/window_fwd.hpp
	libs/systems/include/sge/systems/window_source.hpp
	libs/systems/include/sge/systems/window_source_fwd.hpp
	libs/systems/include/sge/systems/with_audio_loader.hpp
	libs/systems/include/sge/systems/with_audio_loader_fwd.hpp
	libs/systems/include/sge/systems/with_audio_player.hpp
	libs/systems/include/sge/systems/with_audio_player_fwd.hpp
	libs/systems/include/sge/systems/with_font.hpp
	libs/systems/include/sge/systems/with_font_fwd.hpp
	libs/systems/include/sge/systems/with_image2d.hpp
	libs/systems/include/sge/systems/with_image2d_fwd.hpp
	libs/systems/include/sge/systems/with_input.hpp
	libs/systems/include/sge/systems/with_input_fwd.hpp
	libs/systems/include/sge/systems/with_renderer.hpp
	libs/systems/include/sge/systems/with_renderer_fwd.hpp
	libs/systems/include/sge/systems/with_window.hpp
	libs/systems/include/sge/systems/with_window_fwd.hpp
	libs/systems/include/sge/systems/wrapped_window.hpp
	libs/systems/include/sge/systems/wrapped_window_fwd.hpp
	libs/systems/src/systems/audio_loader.cpp
	libs/systems/src/systems/audio_player.cpp
	libs/systems/src/systems/audio_player_default.cpp
	libs/systems/src/systems/config.cpp
	libs/systems/src/systems/custom_cursor.cpp
	libs/systems/src/systems/detail/instance.cpp
	libs/systems/src/systems/detail/list.cpp
	libs/systems/src/systems/detail/quit_on_escape.cpp
	libs/systems/src/systems/detail/renderer.cpp
	libs/systems/src/systems/exception.cpp
	libs/systems/src/systems/font.cpp
	libs/systems/src/systems/image2d.cpp
	libs/systems/src/systems/input.cpp
	libs/systems/src/systems/log_location.cpp
	libs/systems/src/systems/log_settings.cpp
	libs/systems/src/systems/make_empty_list.cpp
	libs/systems/src/systems/original_window.cpp
	libs/systems/src/systems/renderer.cpp
	libs/systems/src/systems/window.cpp
	libs/systems/src/systems/wrapped_window.cpp
)

find_package(
	awl
	REQUIRED
)

add_sge_base_library(
	systems
	HAS_IMPL_DIR
	SGE_DEPS
		sgeaudio
		sgeconfig
		sgecore
		sgefont
		sgeimage2d
		sgeinput
		sgelog
		sgemedia
		sgeparse
		sgeparseini
		sgeplugin
		sgerenderer
		sgesprite
		sgetexture
		sgeviewport
		sgewindow
	TRANSITIVE_SGE_DEPS
		sgeaudio_interface
		sgecore_interface
		sgefont_interface
		sgeimage2d_interface
		sgeinput_interface
		sgelog_interface
		sgemedia_interface
		sgeplugin_interface
		sgerenderer_interface
		sgetexture_interface
		sgeviewport_interface
		sgewindow_interface
	ADDITIONAL_DEPS
		${awl_TARGET}
		${fcppt_core_TARGET}
		${fcppt_log_TARGET}
		${Boost_FILESYSTEM_LIBRARIES}
		${Boost_SYSTEM_LIBRARIES}
	TRANSITIVE_ADDITIONAL_DEPS
		awl_interface
		fcppt_boost_interface
		fcppt_core_interface
		fcppt_log_interface
		${Boost_FILESYSTEM_LIBRARIES}
		${Boost_SYSTEM_LIBRARIES}
)
